// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render offset pagination component 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11 + .bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c11 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r0:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":r0:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          1 - 3 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        display="none"
        style="position: fixed; left: 0px; top: 0px; right: auto; bottom: auto; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":r0:-label"
            class="c10"
            id=":r0:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r3:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r3:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r4:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r4:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid page info 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11 + .bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c11 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":r5:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":r5:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          -8 - -6 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        display="none"
        style="position: fixed; left: 0px; top: 0px; right: auto; bottom: auto; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":r5:-label"
            class="c10"
            id=":r5:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r8:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r8:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":r9:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":r9:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid range info 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11 + .bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c11 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":ra:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":ra:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          1 - -5 of 10
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        display="none"
        style="position: fixed; left: 0px; top: 0px; right: auto; bottom: auto; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":ra:-label"
            class="c10"
            id=":ra:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rd:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rd:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":re:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":re:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with no items 1`] = `
.c7 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c12 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
}

.c8 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c4 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c4:focus {
  outline: none;
}

.c4[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c4 + .bd-button {
  margin-top: 0.5rem;
}

.c4:active {
  background-color: #DBE3FE;
}

.c4:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:hover:not(:active) {
  background-color: #F0F3FF;
}

.c4[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c11 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c11:focus {
  outline: none;
}

.c11[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c11 + .bd-button {
  margin-top: 0.5rem;
}

.c11:active {
  background-color: #DBE3FE;
}

.c11:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c11:hover:not(:active) {
  background-color: #F0F3FF;
}

.c11[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c6 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c10 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c3 {
  position: relative;
}

.c5 {
  color: #313440;
  width: auto;
}

@media (min-width:720px) {
  .c4 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c4 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c11 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c11 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c3"
    >
      <button
        aria-activedescendant=""
        aria-controls=":rf:-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c4 c5"
        id=":rf:-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c6"
        >
          0 of 0
          <svg
            aria-hidden="true"
            class="c7"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c8"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        display="none"
        style="position: fixed; left: 0px; top: 0px; right: auto; bottom: auto; transform: translate(0px, 4px);"
      >
        <div
          class="c9"
        >
          <ul
            aria-labelledby=":rf:-label"
            class="c10"
            id=":rf:-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c2"
  >
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":ri:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":ri:"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c11 c5"
      disabled=""
      type="button"
    >
      <span
        class="c6"
      >
        <svg
          aria-labelledby=":rj:"
          class="c12"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id=":rj:"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
